--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "build": "cross-env NODE_ENV=production webpack -p",
     "clean": "rimraf dist/",
     "dev:server": "cross-env NODE_ENV=development PORT=3000 nodemon server/node-server.js",
-    "dev:client": "cross-env NODE_ENV=development webpack-dev-server -d --inline --hot --progress --no-info",
-    "dev": "concurrently -r 'npm run dev:client' 'npm run dev:server'",
+    "dev:client": "cross-env NODE_ENV=development webpack-dev-server -d --inline --hot --port 3001 --progress --no-info",
+    "dev": "concurrently -r \"npm run dev:client\" \"npm run dev:server\"",
     "lint": "npm run lint-ts && npm run lint-js && npm run lint-css",
     "lint-css": "stylelint './src/**/*.css'",
     "lint-ts": "tslint 'src/**/*.tsx' 'src/**/*.ts' 'test/**/*.tsx' 'test/**/*.ts'",
     "lint-js": "eslint '**/*.js' --ignore-path .gitignore",
     "postinstall": "npm run typings && npm run build",
-    "start": "cross-env NODE_ENV=production node server/node-server.js",
+    "start": "cross-env NODE_ENV=production PORT=3002 node server/node-server.js",
     "pretest": "npm run lint",
     "test": "ts-babel-node ./node_modules/.bin/_mocha --opts ./test-utils/mocha.opts",
     "test:watch": "ts-babel-node ./node_modules/.bin/_mocha --opts ./test-utils/mocha.opts --watch --watch-extensions ts,tsx",
