--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "url": "https://github.com/rangle/rangle-starter/issues"
   },
   "dependencies": {
+    "antd": "^1.5.0",
     "express": "^4.13.4",
     "helmet": "^2.0.0",
     "http-proxy": "^1.13.2",
@@ -47,7 +48,7 @@
   "devDependencies": {
     "autoprefixer": "^6.3.3",
     "autoprefixer-core": "^6.0.1",
-    "awesome-typescript-loader": "^0.19.0",
+    "awesome-typescript-loader": "^1.1.1",
     "babel-core": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "basscss": "^8.0.1",
