--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "dev:server": "cross-env NODE_ENV=development PORT=3000 nodemon server/node-server.js",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server -d --inline --hot --port 3001 --progress --no-info",
     "dev": "concurrently -r \"npm run dev:client\" \"npm run dev:server\"",
-    "lint": "npm run lint-ts && npm run lint-js && npm run lint-css",
-    "lint-css": "stylelint './src/**/*.css'",
+    "lint": "npm run lint-ts && npm run lint-js && npm run stylefmt && npm run lint-css ",
+    "lint-css": "stylelint ./src/**/*.css",
     "lint-ts": "tslint 'src/**/*.tsx' 'src/**/*.ts' 'test/**/*.tsx' 'test/**/*.ts'",
     "lint-js": "eslint '**/*.js' --ignore-path .gitignore",
+    "stylefmt": "stylefmt -R src/",
     "postinstall": "npm run typings && npm run build",
     "start": "cross-env NODE_ENV=production PORT=3002 node server/node-server.js",
     "pretest": "npm run lint",
-    "test": "ts-babel-node ./node_modules/.bin/_mocha --opts ./test-utils/mocha.opts",
-    "test:watch": "ts-babel-node ./node_modules/.bin/_mocha --opts ./test-utils/mocha.opts --watch --watch-extensions ts,tsx",
+    "test": "ts-babel-node ./node_modules/mocha/bin/_mocha --opts ./test-utils/mocha.opts",
+    "test:watch": "ts-babel-node ./node_modules/mocha/bin/_mocha --opts ./test-utils/mocha.opts --watch --watch-extensions ts,tsx",
     "typings": "rimraf typings/ && typings install"
   },
   "keywords": [
@@ -50,7 +51,8 @@
     "autoprefixer-core": "^6.0.1",
     "awesome-typescript-loader": "^1.1.1",
     "babel-core": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",    
+    "babel-plugin-antd": "^0.4.0",
+    "babel-preset-es2015": "^6.9.0",
     "body-parser": "^1.15.1",
     "chai": "^3.5.0",
     "classnames": "^2.2.3",
@@ -96,7 +98,9 @@
     "sinon": "^1.17.3",
     "source-map-support": "^0.4.0",
     "style-loader": "^0.13.0",
-    "stylelint": "^6.4.2",
+    "stylefmt": "^3.5.0",
+    "stylelint": "^6.6.0",
+    "stylelint-config-standard": "^9.0.0",
     "stylelint-webpack-plugin": "^0.2.0",
     "ts-babel-node": "^1.0.0",
     "ts-node": "^0.9.0",
