--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "express": "^4.13.4",
     "helmet": "^2.0.0",
     "http-proxy": "^1.13.2",
+    "react-router-redux": "^4.0.5",
     "winston": "^2.1.1"
   },
   "devDependencies": {
