fixes(typings): fixes typings. complete Counter demo

--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,3 @@
 {
-  "presets": ["es2015"],
-  "plugins": [
-    [
-      "antd",
-      {
-        "style": "css"
-      }
-    ]
-  ]
+  "presets": ["es2015"]
 }
