--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "ava": "^0.15.2",
     "awesome-typescript-loader": "^1.1.1",
     "babel-core": "^6.9.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-antd": "^0.4.0",
     "babel-preset-es2015": "^6.9.0",
     "body-parser": "^1.15.1",
@@ -73,7 +74,7 @@
     "file-loader": "^0.8.4",
     "gh-pages": "^0.11.0",
     "history": "^3.0.0",
-    "html-webpack-plugin": "^2.9.0",
+    "html-webpack-plugin": "^2.21.0",
     "immutable": "^3.8.1",
     "istanbul": "^1.0.0-alpha.2",
     "jsdom": "^9.2.1",
@@ -114,9 +115,9 @@
     "typescript": "^1.8.10",
     "typings": "^1.0.4",
     "url-loader": "^0.5.6",
-    "webpack": "^1.13.0",
+    "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.9.1",
+    "webpack-hot-middleware": "^2.10.0",
     "webpack-split-by-path": "0.0.10",
     "whatwg-fetch": "^1.0.0"
   },
