--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test": "tsc && ava --verbose",
     "test:watch": "concurrently \"tsc -w\"  \"ava --verbose --watch\"",
     "typings": "rimraf typings/ && typings install",
-    "ghpage": "cross-env NODE_ENV=gh npm run clean && webpack -d && node ./scripts/gh-pages.js"
+    "ghpage": "npm run clean && cross-env NODE_ENV=gh webpack -d && node ./scripts/gh-pages.js"
   },
   "keywords": [
     "react",
@@ -43,13 +43,13 @@
     "url": "https://github.com/bang88/typescript-react-redux-starter/issues"
   },
   "dependencies": {
-    "antd": "^1.5.0",
     "express": "^4.13.4",
     "helmet": "^2.0.0",
     "http-proxy": "^1.13.2",
     "winston": "^2.1.1"
   },
   "devDependencies": {
+    "antd": "^1.5.1",
     "autoprefixer": "^6.3.3",
     "autoprefixer-core": "^6.0.1",
     "ava": "^0.15.2",
