--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint": "npm run lint-ts && npm run lint-js && npm run stylefmt && npm run lint-css ",
     "lint-css": "stylelint ./src/**/*.css",
     "lint-ts": "tslint 'src/**/*.tsx' 'src/**/*.ts' 'test/**/*.tsx' 'test/**/*.ts'",
-    "lint-js": "eslint '**/*.js' --ignore-path .gitignore",
+    "lint-js": "eslint \"**/*.js\" --fix --ignore-path .gitignore",
     "stylefmt": "stylefmt -R src/",
     "postinstall": "npm run typings",
     "start": "cross-env NODE_ENV=production PORT=3002 node server/node-server.js",
