chore(package.json): fixes running scripts on  windows issues

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server -d --inline --hot --port 3001 --progress --no-info",
     "dev": "concurrently -r \"npm run dev:client\" \"npm run dev:server\"",
     "lint": "npm run lint-ts && npm run lint-js && npm run stylefmt && npm run lint-css ",
-    "lint-css": "stylelint ./src/**/*.css",
-    "lint-ts": "tslint 'src/**/*.tsx' 'src/**/*.ts' 'test/**/*.tsx' 'test/**/*.ts'",
+    "lint-css": "stylelint \"./src/**/*.css\"",
+    "lint-ts": "tslint \"src/**/*.tsx\" \"src/**/*.ts\"",
     "lint-js": "eslint \"**/*.js\" --fix --ignore-path .gitignore",
     "stylefmt": "stylefmt -R src/",
     "postinstall": "npm run typings",
