--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "cover": "nyc npm run test",
     "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
     "dev:server": "cross-env NODE_ENV=development PORT=3000 nodemon server/node-server.js",
-    "dev:client": "cross-env NODE_ENV=development webpack-dev-server -d --inline --hot --port 3001 --progress --no-info --colors --watch",
+    "dev:client": "cross-env NODE_ENV=development nodemon server/node-client.js",
     "dev": "concurrently -r \"npm run dev:client\" \"npm run dev:server\"",
     "lint": "npm run lint-ts && npm run lint-js && npm run stylefmt && npm run lint-css ",
     "lint-css": "stylelint \"./src/**/*.css\"",
@@ -82,6 +82,8 @@
     "immutable": "^3.8.1",
     "istanbul": "^1.0.0-alpha.2",
     "jsdom": "^9.2.1",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "nodemon": "^1.9.2",
     "nyc": "^6.6.1",
     "object-assign": "^4.0.1",
@@ -95,6 +97,7 @@
     "react": "^15.1.0",
     "react-addons-test-utils": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-hot-loader": "^1.3.0",
     "react-redux": "^4.4.4",
     "react-router": "^2.4.0",
     "react-router-redux": "^4.0.5",
